<resources>
    <string name="app_name">AllezMap</string>
    <!--程序主页面的标题栏-->
    <string name="title_activity_programme">AllezMap</string>

    <!--检测网络-->
    <string name="login_network_title">没有可用的网络</string>
    <string name="login_network_message">是否对网络进行设置？</string>
    <string name="login_network_setting">设置</string>
    <string name="login_network_cancel">否</string>

    <string name="login_language">语言</string><!--到时候删除-->

    <!--程序主页面-菜单栏-头像下方 欢迎语句-->
    <string name="programm_head_welcome_and_name">欢迎来到AllezMap！</string>

    <string name="programm_many_times_close">再按一次退出程序</string>

    <!-- 程序首页栏目-->
    <string name="program_it_about">关于</string>
    <string name="program_it_compte">我的账户</string>
    <string name="program_it_language">语言</string>
    <string name="program_it_setting">设置</string>
    <string name="program_it_exit">退出</string>

    <string name="program_it_share">一键分享</string>
    <string name="program_it_opinion">意见反馈</string>


    <string name="program_it_day_night">切换主题</string>
    <!--<string name="program_it_night">夜间模式</string>-->


    <!--登陆模块-->
    <string name="login_bar_title">登陆页面</string>
    <string name="login_hint_name">用户名</string>
    <string name="login_hint_password">密码</string>
    <string name="login_btn_hint_login">登陆</string>
    <string name="login_btn_hint_find">找回密码</string>

    <string name="login_error_name">账户不能为空</string>
    <string name="login_error_pass">密码不能为空</string>

    <!--忘记密码模块-->
    <string name="forget_bar_title">找回密码</string>
    <string name="forget_hint_email">请输入注册时的邮箱</string>
    <string name="forget_hint_tel">请输入注册时的手机号</string>
    <string name="forget_btn_hint_entre">确定</string>
    <string name="forget_btn_hint_retour">重新登录</string>
    <string name="forget_hint_name">用户名</string>


    <string name="forget_error_name">账户不能为空</string>
    <string name="forget_error_email">邮箱不能为空</string>
    <string name="forget_error_email_format">请检查邮箱格式</string>
    <string name="forget_error_tel">电话不能为空</string>


    <!--我的账户模块-->
    <string name="account_hint_name">我的账户：</string>
    <string name="account_hint_tel">我的电话：</string>
    <string name="account_hint_mail">我的邮箱：</string>
    <string name="account_title">我的账户</string>
    <string name="account_btn_return">返回</string>


    <!--关于模块-->
    <string name="about_title">关于</string>


    <!--分享模块-->
    <string name="share_select_title">请选择要分享到的应用</string>
    <string name="share_title">分享</string>
    <string name="share_content">我正在使用AllezMap，强烈推荐！</string>


    <!--发送反馈邮件的模块-->
    <string name="send_client_title">请选择反馈使用的邮件客户端</string>
    <string name="send_text_title">标题：</string>
    <string name="send_text_text">正文：</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">设置</string>

    <!--地图选择页面-->
    <string name="map_select_title">附近</string>
    <string name="map_btn_hint_find">搜索</string>
    <string name="map_select_hint_time">时间</string>
    <string name="map_select_hint_date">日期</string>
    <!--<string name="map_ed_select_hint_date">默认当前日期，点击更改</string>-->
    <!--<string name="map_ed_select_hint_time">默认当前时间，点击更改</string>-->

    <string name="map_delete_btn">删除</string>
    <string name="map_edit_text_like">可选，输入您的偏好</string>
    <string name="map_group_btn_my_location">我的位置</string>
    <string name="map_group_btn_select_location">选择地址</string>


    <string name="map_reminder_four_adresse">不好意思哟，目前最多支持四个地址呢！</string>




</resources>
