<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.helloworld.lyz.allezmap.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/login_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.helloworld.lyz.allezmap.LoginActivity"
        tools:showIn="@layout/app_bar_programme">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Login_text_input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp">

            <EditText
                android:id="@+id/login_editText_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_name"
                android:textColorHint="@color/colorGray"
               android:maxLines="1"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/Login_text_input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/login_editText_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_hint_password"
                android:inputType="textPassword"
                android:textColorHint="@color/colorGray"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>

        <!--<CheckBox-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="记住密码"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:background="@color/colorPrimary"/>-->
        <!--android:textAllCaps="false"  取消自动变为大写-->
        <Button
            android:id="@+id/login_button_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/login_btn_hint_login"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/login_button_find"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/login_btn_hint_find"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textAllCaps="false"/>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
