<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.helloworld.lyz.allezmap.MapSelectActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/map_select_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_programme">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/app_bar_programme">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:showIn="@layout/app_bar_programme">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/ic_menu_month" />
                <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/map_select_textview_date"-->
                <!--android:textSize="@dimen/fab_margin"-->
                <!--android:textColor="@color/colorPrimary"-->
                <!--/>-->
                <EditText
                    android:id="@+id/map_ed_select_date"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:gravity="center"
                   />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:showIn="@layout/app_bar_programme">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/ic_menu_today" />
                <!--<TextView-->
                <!--android:text="@string/map_select_hint_time"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/map_select_textview_time"-->
                <!--/>-->
                <EditText
                    android:id="@+id/map_ed_select_time"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:gravity="center"
             />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:showIn="@layout/app_bar_programme">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:drawable/ic_menu_mylocation" />

                <LinearLayout
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:focusable="true"
                    android:focusableInTouchMode="true"

                    android:orientation="horizontal"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior"
                    tools:showIn="@layout/app_bar_programme">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:focusable="true"
                        android:focusableInTouchMode="true"

                        android:orientation="vertical"
                        app:layout_behavior="@string/appbar_scrolling_view_behavior"
                        tools:showIn="@layout/app_bar_programme">

                        <RadioGroup
                            android:id="@+id/map_select_location_group"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            >


                            <RadioButton
                                android:id="@+id/map_my_location_rad_btn"
                                android:layout_width="240dp"
                                android:textSize="20dp"
                                android:layout_height="wrap_content"
                                android:text="@string/map_group_btn_my_location"
                                android:gravity="center"

                               />


                            <RadioButton
                                android:id="@+id/map_other_location_rad_btn"
                                android:layout_width="240dp"
                                android:layout_height="wrap_content"

                                android:layout_marginTop="15dp"
                                android:text="@string/map_group_btn_select_location"
                                android:textSize="20dp"
                                android:gravity="center"/>


                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:background="@android:drawable/ic_menu_add"
                            android:id="@+id/map_imageview_add_mylocation"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_marginTop="15dp"
                            android:background="@android:drawable/ic_menu_add"
                            android:id="@+id/map_imageview_add_otherlocation"/>
                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


            <com.helloworld.lyz.allezmap.MapSlideCutListView
                android:id="@+id/slideCutListView"
                android:layout_width="250dp"
                android:layout_height="wrap_content"

                android:paddingLeft="0dp"
                android:listSelector="@android:color/transparent"
                android:cacheColorHint="@android:color/transparent"
                android:layout_marginLeft="70dp"
                android:gravity="left"
                android:scrollbars="none"

                >
            </com.helloworld.lyz.allezmap.MapSlideCutListView>

            <!--<TextView-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginLeft="80dp"-->
                <!--android:text="fdasf" />-->
        </LinearLayout>




        <!--<CheckBox-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="记住密码"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:layout_marginLeft="20dp"-->
        <!--android:layout_marginRight="20dp"-->
        <!--android:background="@color/colorPrimary"/>-->
        <!--android:textAllCaps="false"  取消自动变为大写-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="horizontal"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:paddingTop="0dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/ic_menu_compass" />
            <!--<TextView-->
            <!--android:text="@string/map_select_hint_time"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/map_select_textview_time"-->
            <!--/>-->
            <EditText
                android:id="@+id/map_ed_select_like"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:gravity="center"
                android:hint="@string/map_edit_text_like"
                />

        </LinearLayout>

        <Button
            android:id="@+id/map_button_find"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_ripple_bg"

            android:text="@string/map_btn_hint_find"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="18sp" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
